<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="260dp"
    android:background="@color/colorGrafiek25"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/TipVdDag"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitel"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/TipVdDag"
        android:textColor="@color/colorTekst"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/ckTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btOk"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="5dp"
        android:checked="true"
        android:text="@string/ToonBijOpstart"
        android:textColor="@color/colorTekst"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btOk"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Ok"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>