<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nl.whitedove.verbruiksmanager.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/lltop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvApparaten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MijnApparaten"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spJaarMaandDag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/JaarMaandDag"
            android:spinnerMode="dropdown"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:textSize="14sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvApparaten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/separator"
        android:layout_below="@+id/lltop"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/tvVerbruik"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tvVerbruik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llr1"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/TotVerbruikEnKosten"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llr2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvr1k1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="100dp"
            android:text="@string/Perdag"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvr1k2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorOranje"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvr1k3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorOranje"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llr3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvr2k1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="100dp"
            android:text="@string/Permaand"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvr2k2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorOranje"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvr2k3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorOranje"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llr3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llKnoppen"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvr3k1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="100dp"
            android:text="@string/Perjaar"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvr3k2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorOranje"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvr3k3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorOranje"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llKnoppen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabGrafiek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="10dp"
            android:src="@drawable/grafiek" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAppVoegtoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="10dp"
            android:src="@drawable/voegtoe" />

    </LinearLayout>

</RelativeLayout>
